# gravity

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  save.json  save_creator.py
saves/: test_collision.json  three_body.json
src/: app.rs  main.rs  model.rs  nannou_adapter.rs  view_controller.rs
src/app/: model.rs  view_controller.rs
src/app/model/: universe.rs
src/app/model/config_manager/: config.rs
src/app/model/save_manager/: save.rs
src/app/model/universe/: body.rs  physics.rs
src/app/model/universe/physics/: collision_logic.rs  gravity.rs
src/app/model/universe/physics/collision_logic/: bodies_logic.c  bodies_logic.rs
src/app/view_controller/: camera.rs
src/model/: config_manager.rs  save_manager.rs  universe.rs
src/model/save_manager/: save.rs
src/model/universe/: body.rs  physics.rs
src/model/universe/physics/: gravity.rs
src/model/universe/physics/collision_logic/: bodies_logic.rs
src/view_controller/: camera.rs
