[package]
name = "gravity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.73"

[dependencies]
nannou = "0.18.1"
log = "0.4.17"
chrono = "0.4.22"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15.0"
